Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -266,6 +266,7 @@ header {
   display: block;
   float: left;
   padding: 40px 0;
+  width: 20%;
 }
 
 .companyname a {
@@ -410,7 +411,7 @@ footer span {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 691px;
+  width: 80%;
 }
 
 .widget.extendednavigation a.pull {
@@ -418,7 +419,6 @@ footer span {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0;
   padding: 30px 0;
 }
